--- a/javacode/hello_world/pom.xml
+++ b/javacode/hello_world/pom.xml
@@ -18,12 +18,12 @@
           <repository>                          <!-- this is release version -->
                   <id>weekend</id>
                   <name>weekend-release</name>
-                  <url>http://13.127.50.217:8081/repository/weekend-release/</url>
+                  <url>http://13.233.71.222:8081/repository/weekend-release/</url>
           </repository>
           <snapshotRepository>                  <!-- this is snapshot version -->
                   <id>weekend</id>
-                  <name>Internal Releases</name>
-                  <url>http://13.127.50.217:8081/repository/weekend-snapshot/</url>
+                  <name>weekend-snapshot</name>
+                  <url>http://13.233.71.222:8081/repository/weekend-snapshot/</url>
           </snapshotRepository>
   </distributionManagement>
 
