--- a/javacode/hello_world/pom.xml
+++ b/javacode/hello_world/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>hello_world_ronak</groupId>
   <artifactId>hello_world</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>2.0.0</version>
   <dependencies>
         <!-- https://mvnrepository.com/artifact/io.airlift/testing -->
 
