--- a/javacode/demo/pom.xml
+++ b/javacode/demo/pom.xml
@@ -2,16 +2,33 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>demo</groupId>
   <artifactId>demoapp</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.1.0</version>
   <dependencies>
-        <!-- https://mvnrepository.com/artifact/io.airlift/testing -->
-
-        <dependency>
-        <groupId>org.testng</groupId>
-        <artifactId>testng</artifactId>
-        <version>7.6.1</version>
-        <scope>test</scope>
-        </dependency>
-
-</dependencies>
+          <!-- https://mvnrepository.com/artifact/io.airlift/testing -->
+        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+          <dependency>
+                  <groupId>org.testng</groupId>
+                  <artifactId>testng</artifactId>
+    <version>7.4.0</version>
+    <scope>test</scope>
+    </dependency>
+    <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+    </dependency>
+  </dependencies>
+    <distributionManagement>
+            <repository>
+                    <id>weekend</id>
+                    <name>weekend-release</name>
+                    <url>http://52.66.206.172:8081/repository/weekend-release/</url>
+            </repository>
+            <snapshotRepository>
+                    <id>weekend</id>
+                    <name>weekend-snapshot</name>
+                    <url>http://52.66.206.172:8081/repository/weekend-snapshot/</url>
+            </snapshotRepository>
+    </distributionManagement>
 </project>
